--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,34 @@
     <![endif]-->
 
     <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    
+    <style>
+      img.avatar.width-full.rounded-2 {
+    border-radius: 50%;
+    border: 5px solid;
+    box-shadow: 0px 0px 7px #777;
+    max-width: 100%;
+    height: 100%;
+}
+      .vcard-names-container {
+    text-align: center;
+}
+      .vcard-username small {
+    color: #337ab7;
+}
+      .user-profile-bio {
+    line-height: 1.5em;
+    text-align: justify;
+        margin-bottom: 1em;
+}
+      .vcard-details ul {
+    padding-left: 0;
+    list-style-type: none;
+}
+      .oticon { 
+        vertical-align: middle;
+      }
+    </style>
   </head>
 
   <body>
@@ -88,7 +116,7 @@
       </div>
     </div>
 
-    {% if site.google_analytics %}
+    {% if true or site.google_analytics %}
       <script type="text/javascript">
         var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
         document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
