--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,31 +16,41 @@
 
     <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
     
-    <style>
+      <style>
+      .repo-owner { margin-bottom: 25px; }
+        
       img.avatar.width-full.rounded-2 {
-    border-radius: 50%;
-    border: 5px solid;
-    box-shadow: 0px 0px 7px #777;
-    max-width: 100%;
-    height: 100%;
-}
+          border-radius: 50%;
+          border: 5px solid;
+          box-shadow: 0px 0px 7px #777;
+          max-width: 100%;
+          height: 100%;
+      }
       .vcard-names-container {
-    text-align: center;
-}
+          text-align: center;
+      }
       .vcard-username small {
-    color: #337ab7;
-}
+          color: #337ab7;
+      }
       .user-profile-bio {
-    line-height: 1.5em;
-    text-align: justify;
-        margin-bottom: 1em;
-}
+          line-height: 1.5em;
+          text-align: justify;
+              margin-bottom: 1em;
+      }
       .vcard-details ul {
-    padding-left: 0;
-    list-style-type: none;
-}
+          padding-left: 0;
+          list-style-type: none;
+      }
       .oticon { 
         vertical-align: middle;
+      }
+      li.vcard-detail {
+        display: inline-block;
+        margin: .5em;
+      }
+      ul.vcard-details {
+        padding: 0;
+        text-align: center;
       }
     </style>
   </head>
