Added share buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,12 @@
         text-align: center;
       }
     </style>
+    
+    
+<!-- START ShareThis JS -->    
+<script type="text/javascript" id="st_insights_js" src="http://w.sharethis.com/button/buttons.js?publisher=2fe2776b-2bea-41dd-8695-33fb17169881"></script>
+<script type="text/javascript">stLight.options({publisher: "2fe2776b-2bea-41dd-8695-33fb17169881", doNotHash: false, doNotCopy: false, hashAddressBar: true});</script>
+<!-- END ShareThis JS -->        
   </head>
 
   <body>
@@ -75,6 +81,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           {{ content }}
+          
+          <div class="share-buttons">
+            <span class='st_facebook_vcount' displayText='Facebook'></span>
+            <span class='st_twitter_vcount' displayText='Tweet'></span>
+            <span class='st_linkedin_vcount' displayText='LinkedIn'></span>
+          </div>
         </section>
 
         <aside id="sidebar">
