Added social follow buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,6 +149,11 @@
               </li>
             </ul>
             
+            <div class="social-follow">
+              <span class='st_fbsub_large' displayText='Facebook Subscribe' st_username='omriallouche'></span>
+              <span class='st_twitterfollow_large' displayText='Twitter Follow' st_username='GilgameshSleeps'></span>
+            </div>
+            
             <iframe
   src="https://platform.twitter.com/widgets/follow_button.html?screen_name=GilgameshSleeps&show_screen_name=false&show_count=false&size=l"
   title="Follow @GilgameshSleeps on Twitter"
