gh pages template changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,10 +55,10 @@
     </style>
     
     
-<!-- START ShareThis JS -->    
-<script type="text/javascript" id="st_insights_js" src="http://w.sharethis.com/button/buttons.js?publisher=2fe2776b-2bea-41dd-8695-33fb17169881"></script>
-<script type="text/javascript">stLight.options({publisher: "2fe2776b-2bea-41dd-8695-33fb17169881", doNotHash: false, doNotCopy: false, hashAddressBar: true});</script>
-<!-- END ShareThis JS -->        
+    <!-- START ShareThis JS -->    
+      <script type="text/javascript" id="st_insights_js" src="https://ws.sharethis.com/button/buttons.js?publisher=2fe2776b-2bea-41dd-8695-33fb17169881"></script>
+      <script type="text/javascript">stLight.options({publisher: "2fe2776b-2bea-41dd-8695-33fb17169881", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <!-- END ShareThis JS -->        
   </head>
 
   <body>
