gh pages template changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,12 +55,13 @@
         text-align: center;
       }
       .share-buttons {
-        min-height: 50px;
+        min-height: 100px;
         margin-top: 2em;
         margin-bottom: 2em;
         background: white;
         padding: 1em;
         border: 1px solid #eee;
+        text-align: center;
       }
     </style>
     
