--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
       .vcard-names-container {
           text-align: center;
       }
+      .vcard-username { font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; }
       .vcard-username small {
           color: #337ab7;
       }
