--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       .vcard-names-container {
           text-align: center;
       }
-      .vcard-username { font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; }
+      .vcard-names { font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; }
       .vcard-username small {
           color: #337ab7;
       }
@@ -53,6 +53,9 @@
       }
       ul.vcard-details {
         padding: 0;
+        text-align: center;
+      }
+      .social-follow {
         text-align: center;
       }
       .share-buttons {
