--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       #main-content h1 { margin-bottom: .75em; }
         
       .repo-owner { margin-bottom: 25px; }
-      sidebar .user-profile { text-align: center; }
+      #sidebar .user-profile { text-align: center; }
       img.avatar.width-full.rounded-2 {
           border-radius: 50%;
           border: 5px solid;
@@ -59,6 +59,7 @@
         background: white;
         padding: 1em;
         border: 1px solid #eee;
+        text-align: center;
       }
     </style>
     
