--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,9 @@
     </style>
     
     
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    
     <!-- START ShareThis JS -->    
       <script type="text/javascript" id="st_insights_js" src="https://ws.sharethis.com/button/buttons.js?publisher=2fe2776b-2bea-41dd-8695-33fb17169881"></script>
       <script type="text/javascript">stLight.options({publisher: "2fe2776b-2bea-41dd-8695-33fb17169881", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
@@ -83,6 +86,15 @@
         {% if site.github.is_user_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>Follow me on</small> GitHub</a>
         {% endif %}
+        
+        <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/omriallouche/asana-style-loader" 
+   data-icon="octicon-star" 
+   data-style="mega" 
+   data-count-href="/omriallouche/asana-style-loader/stargazers" 
+   data-count-api="/repos/omriallouche/asana-style-loader#stargazers_count" 
+   data-count-aria-label="# stargazers on GitHub" 
+   aria-label="Star omriallouche/asana-style-loader on GitHub">Star</a>
       </div>
     </header>
 
@@ -101,7 +113,7 @@
         </section>
 
         <aside id="sidebar">
-          {% if site.show_downloads %}
+          {% if site.show_downloads | default: true %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
               .zip file
