--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,7 @@
       }
     </style>
     
+    {% seo %}
     
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -71,7 +72,7 @@
     <!-- START ShareThis JS -->    
       <script type="text/javascript" id="st_insights_js" src="https://ws.sharethis.com/button/buttons.js?publisher=2fe2776b-2bea-41dd-8695-33fb17169881"></script>
       <script type="text/javascript">stLight.options({publisher: "2fe2776b-2bea-41dd-8695-33fb17169881", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-    <!-- END ShareThis JS -->        
+    <!-- END ShareThis JS -->
   </head>
 
   <body>
