--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,17 @@
              data-count-api="/repos/omriallouche/asana-style-loader#stargazers_count" 
              data-count-aria-label="# stargazers on GitHub" 
              aria-label="Star omriallouche/asana-style-loader on GitHub">Star</a>
-        </div>
+          
+          <a class="github-button" 
+             href="https://github.com/omriallouche/asana-style-loader/fork" 
+             data-icon="octicon-repo-forked" 
+             data-style="mega" 
+             data-count-href="/omriallouche/asana-style-loader/network" 
+             data-count-api="/repos/omriallouche/asana-style-loader#forks_count" 
+             data-count-aria-label="# forks on GitHub" 
+             aria-label="Fork omriallouche/asana-style-loader on GitHub">Fork</a>
+
+        </div>        
       </div>
     </header>
 
