--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,22 +91,22 @@
         
         <!-- Github star widget -->
         <div class="github-star">
-          <a class="github-button" href="https://github.com/omriallouche/asana-style-loader" 
+          <a class="github-button" href="{{site.github.repository_url}}" 
              data-icon="octicon-star" 
              data-style="mega" 
-             data-count-href="/omriallouche/asana-style-loader/stargazers" 
-             data-count-api="/repos/omriallouche/asana-style-loader#stargazers_count" 
+             data-count-href="/{{site.github.owner_name}}/{{site.github.repository_name}}/stargazers" 
+             data-count-api="/repos/{{site.github.owner_name}}/{{site.github.repository_name}}#stargazers_count" 
              data-count-aria-label="# stargazers on GitHub" 
-             aria-label="Star omriallouche/asana-style-loader on GitHub">Star</a>
+             aria-label="Star {{site.github.owner_name}}/{{site.github.repository_name}} on GitHub">Star</a>
           
           <a class="github-button" 
-             href="https://github.com/omriallouche/asana-style-loader/fork" 
+             href="{{site.github.repository_url}}/fork" 
              data-icon="octicon-repo-forked" 
              data-style="mega" 
-             data-count-href="/omriallouche/asana-style-loader/network" 
-             data-count-api="/repos/omriallouche/asana-style-loader#forks_count" 
+             data-count-href="/{{site.github.owner_name}}/{{site.github.repository_name}}/network" 
+             data-count-api="/repos/{{site.github.owner_name}}/{{site.github.repository_name}}#forks_count" 
              data-count-aria-label="# forks on GitHub" 
-             aria-label="Fork omriallouche/asana-style-loader on GitHub">Fork</a>
+             aria-label="Fork {{site.github.owner_name}}/{{site.github.repository_name}} on GitHub">Fork</a>
 
         </div>        
       </div>
